# aoc-2023

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: day1.rs  lib.rs  main.rs  tmpl.rs
