[package]
name = "aoc-2023"
version = "0.1.0"
authors = ["Ben Sully <ben@bsull.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.52"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
hashbrown = "0.14.3"
itertools = "0.12"
mimalloc = { version = "0.1.27", default-features = false }
once_cell = "1.9.0"
regex = "1.5.4"
serde = { version = "1.0.133", features = ["derive"] }
serde_scan = "0.4.1"
serde_with = "3.4.0"
serde_yaml = "0.9.23"
strum = { version = "0.25.0", features = ["derive"] }

[profile.release]
debug = true
lto = "thin"
codegen-units = 1
